# fitt

./: .env.example  .gitattributes  .gitignore  BACKLOG.md  FITT_PRD.md  FITT_ROADMAP.md  LICENSE  README.md  docker-compose.override.yml.example  docker-compose.yml
.github/workflows/: ci.yml
.kiro/specs/phase1-gateway/: design.md  requirements.md  tasks.md
.kiro/specs/phase12-planning-execution/: design.md  requirements.md  tasks.md
.kiro/specs/phase12.5-capability-surface/: design.md  requirements.md  tasks.md
.kiro/specs/phase12.6-eval-real-registry/: design.md  requirements.md  tasks.md
.kiro/specs/phase2-memory/: design.md  requirements.md  tasks.md
.kiro/specs/phase2.5-sessions/: design.md  requirements.md  tasks.md
.kiro/specs/phase3-telegram/: design.md  requirements.md  tasks.md
.kiro/specs/phase3.5-docker-hub/: design.md  requirements.md  tasks.md
.kiro/specs/phase4-tools/: design.md  requirements.md  tasks.md
.kiro/specs/phase4.10-skills-loader/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/phase4.11-web-search/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/phase4.5-cron-events/: design.md  requirements.md  tasks.md
.kiro/specs/phase4.6-e2e-harness/: design.md  requirements.md  tasks.md
.kiro/specs/phase4.7-project-shell/: design.md  requirements.md  tasks.md
.kiro/specs/phase4.8-visibility-proxies/: design.md  requirements.md  tasks.md
.kiro/specs/phase4.9-upstream-timeouts/: design.md  requirements.md  tasks.md
.kiro/specs/phase5-lessons/: design.md  requirements.md  tasks.md
.kiro/specs/phase6-spec-runner/: design.md  requirements.md  tasks.md
.kiro/specs/phase7-visibility-traceability/: design.md  requirements.md  tasks.md
.kiro/specs/phase7.6-probe-clarity/: design.md  requirements.md  tasks.md
.kiro/steering/: commit-checklist.md  conventions.md  project-overview.md
configs/: config.example.yaml  secrets.example.yaml
docs/: accounts-setup.md  agent-orchestration-survey.md  choosing-a-model.md  coding-agent-setup.md  coding-cli-setup.md  development.md  faq.md  hallucinations-and-poisoning.md  http-api.md  observed-issues.md  prerequisites.md  prior-art.md  quickstart.md
docs/sample-skills/fitt-status/: SKILL.md
gateway/: .dockerignore  Dockerfile  README.md  healthcheck.py  pyproject.toml
gateway/src/gateway/: __init__.py  __main__.py  agent_loop.py  alias_eval.py  alias_eval_coding.py  alias_probe.py  aliases_endpoint.py  app.py  approval.py  approvals_endpoint.py  audit.py  auth.py  capabilities.py  capability_profile.py  capability_reconcile.py  chat.py  claim_check.py  cli.py  cli_watch.py  config.py  context_window.py  cost.py  cron.py  cron_runner.py  cron_scheduler.py  detach.py  dispatch_outcome.py  errors.py  eval_endpoint.py  event_pruner.py  events.py  events_endpoint.py  executor.py  health.py  history_pruner.py  lessons.py  logging_config.py  mcp.py  mcp_endpoint.py  memory.py  (+31 more)
gateway/src/gateway/dashboard/: __init__.py  actions.py  auth.py  edit.py  router.py  secrets_edit.py  views.py
gateway/src/gateway/dashboard/static/: style.css  tz.js
gateway/src/gateway/dashboard/templates/: _aliases_panel.html  _health_panel.html  _overview_panel.html  _turns_list_panel.html  alias_page.html  aliases.html  audit.html  base.html  config_edit.html  cost.html  cron.html  eval.html  gaps.html  health.html  identity.html  identity_edit.html  login.html  overview.html  placeholder.html  projects.html  projects_edit.html  secrets_edit.html  sessions.html  settings.html  skills.html  skills_edit.html  tools.html  turn_not_found.html  turns_detail.html  turns_list.html
gateway/src/gateway/tools/: __init__.py  _types.py  backend.py  cron_tools.py  deny_list.py  fileops.py  gitops.py  inline.py  lessons.py  local_shell.py  plan_tools.py  project_shell.py  registry.py  send_message.py  shelltools.py  web_search.py
gateway/src/gateway/tools/web_providers/: __init__.py  ddgs.py
gateway/tests/: __init__.py  _fixtures.py  _llm_stubs.py  conftest.py  test_agent_loop_record_gap.py  test_alias_eval.py  test_alias_probe.py  test_aliases_endpoint.py  test_app_wiring.py  test_approval.py  test_approvals_endpoint.py  test_audit.py  test_audit_endpoint.py  test_auth.py  test_capabilities.py  test_capability_gaps_endpoint.py  test_capability_profile.py  test_capability_reconcile.py  test_chat.py  test_chat_artifact_hoisting.py  test_chat_error_logging.py  test_chat_router_mode.py  test_chat_tool_forwarding.py  test_claim_check.py  test_cli.py  test_cli_audit_tail.py  test_cli_context.py  test_cli_cron.py  test_cli_eval_record.py  test_cli_inbox.py  test_cli_learn.py  test_cli_turn.py  test_cli_watch.py  test_config.py  test_config_boot_checks.py  test_context_window.py  test_cost.py  test_cron.py  test_cron_runner.py  test_cron_scheduler.py  (+77 more)
gateway/tests/e2e/: README.md  __init__.py  conftest.py  test_cron_lifecycle.py  test_default_alias_lifecycle.py  test_detach_lifecycle.py  test_fixtures.py  test_lessons_lifecycle.py  test_narration_lifecycle.py  test_project_shell_lifecycle.py  test_session_poisoning_lifecycle.py
scripts/: install-open-webui.ps1  install-service.ps1  install-telegram-bot.ps1  smoke-compose.sh  uninstall-open-webui.ps1  uninstall-service.ps1  uninstall-telegram-bot.ps1
telegram-bot/: .dockerignore  Dockerfile  README.md  pyproject.toml
telegram-bot/src/fitt_telegram_bot/: __init__.py  __main__.py  approval.py  bot.py  config.py  event_pusher.py  events_push.py  gateway_client.py  handlers.py  markdown_render.py  prefs.py  streaming.py  turn_renderer.py  turn_stream.py
telegram-bot/tests/: __init__.py  conftest.py  test_approval.py  test_bot.py  test_config.py  test_event_pusher.py  test_events_push.py  test_gateway_client.py  test_handlers.py  test_markdown_render.py  test_prefs.py  test_streaming.py  test_turn_renderer.py  test_turn_stream.py
