[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitt-gateway"
version = "0.1.0"
description = "FITT Gateway - OpenAI-compatible router for local and cloud LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Frederic Marchais" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "litellm>=1.55,<2.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "hypothesis>=6.115",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[project.scripts]
fitt-gateway = "gateway.__main__:main"
fitt = "gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.uv]
# Pin the Python interpreter uv fetches/uses. uv honours this when
# creating .venv/ on `uv sync`. Keep aligned with requires-python above.
required-version = ">=0.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:litellm.*",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "B",       # bugbear
    "UP",      # pyupgrade
    "RUF",     # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["litellm.*", "respx.*"]
ignore_missing_imports = true
