[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitt-gateway"
version = "0.1.0"
description = "FITT Gateway - OpenAI-compatible router for local and cloud LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Frederic Marchais" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "litellm>=1.55,<2.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    # Phase 4.5: 5-field cron-expression evaluator. Handles DST via
    # zoneinfo; we pass pytz-compatible zones through unchanged.
    "croniter>=2.0",
    # tzdata ships the IANA timezone database for platforms that
    # don't install it system-wide (notably Windows). Without it,
    # `zoneinfo.ZoneInfo("America/Los_Angeles")` raises
    # ZoneInfoNotFoundError on Windows dev machines. Linux (our
    # production target) usually has /usr/share/zoneinfo; this
    # package is a no-op there.
    "tzdata>=2024.1",
    # Phase 4.11: DuckDuckGo HTML search via the maintained
    # ddgs PyPI package. ~50KB pure-Python; handles cooldown,
    # region/safesearch params, and DDG quirks. Pinned to
    # match Hermes's choice (>=9.0,<10).
    "ddgs>=9.0,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "hypothesis>=6.115",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
    "types-croniter>=2.0",
]

[project.scripts]
fitt-gateway = "gateway.__main__:main"
fitt = "gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.uv]
# Pin the Python interpreter uv fetches/uses. uv honours this when
# creating .venv/ on `uv sync`. Keep aligned with requires-python above.
required-version = ">=0.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:litellm.*",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "B",       # bugbear
    "UP",      # pyupgrade
    "RUF",     # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["litellm.*", "respx.*"]
ignore_missing_imports = true
