[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitt-telegram-bot"
version = "0.1.0"
description = "FITT Telegram bot - forwards messages to the FITT gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Frederic Marchais" }]

dependencies = [
    "python-telegram-bot[rate-limiter]>=21",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "structlog>=24.4",
    # Phase 7 Slice 7.4: CommonMark -> Telegram HTML
    # conversion so model replies with `**bold**` /
    # ` ```code``` ` / `[link](url)` render correctly on the
    # phone instead of arriving with literal asterisks. Pure
    # Python, ~100KB, no native deps.
    "markdown-it-py>=3.0,<4.0",
    # The bot imports gateway.config and gateway.sessions to share
    # configuration loading and the session registry. An editable
    # install of the gateway package is pulled in as a path dep so
    # code reuse is real and versioned together.
    "fitt-gateway",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "hypothesis>=6.115",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[project.scripts]
fitt-telegram-bot = "fitt_telegram_bot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fitt_telegram_bot"]

[tool.uv]
required-version = ">=0.5"

[tool.uv.sources]
fitt-gateway = { path = "../gateway", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:telegram.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["telegram.*", "respx.*"]
ignore_missing_imports = true
